新增：網站的樣式與版面調整

--- a/css/main.css
+++ b/css/main.css
@@ -486,6 +486,7 @@
     padding: 100px;
     box-sizing: border-box;
     background-color: rgb(161, 172, 166);
+    color: #ffffff;
 }
 
 .portfolio-edmDesign-area .edmDesign-ul {
